--- a/index.html
+++ b/index.html
@@ -15,11 +15,21 @@
           <li>Nutritional information</li>
           <li>Tags </li>
         </ol>
+
       </nav>
     </header>
 
     <main>
+      <figure>
+        <img src="beets.jpg" alt="">
+        <figcaption>
+          A bundle of organic beets from a local farm food co-op program.
+        </figcaption>
+      </figure>
 
+      <p>
+        <time> 55 to 65 days </time> are needed from germination to harvest of the root.
+      </p>
     </main>
     <aside>
 
