--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
       The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
 
-      In fact, <cite>Jim Halpert</cite> once said this about beets, <q cite="The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
+      In fact, <cite>Jim Halpert</cite> once said this about beets, <q>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
 
-      In fact, Jim Halpert once said this about beets, “Fact, bears eat beets. Bears, beets, Battlestar Galactica”."></q>
+      In fact, Jim Halpert once said this about beets, “Fact, bears eat beets. Bears, beets, Battlestar Galactica”.</q>
     </main>
     <aside>
 
