--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
     <main>
       <figure>
         <img src="beets.jpg" alt="">
+
         <figcaption>
           A bundle of organic beets from a local farm food co-op program.
         </figcaption>
+
       </figure>
 
       <p>
@@ -36,7 +38,31 @@
 
       In fact, <cite>Jim Halpert</cite> once said this about beets, <q>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
 
-      rs eat beets. Bears, beets, <i>Battlestar Galactica”.</i></q>
+      bears eat beets. Bears, beets, <i>Battlestar Galactica”.</i></q>
+
+      <p>
+      <blockquote>
+           I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>
+      </blockquote>
+      </p>
+      <footer> <cite>— Chris Pratt</cite></footer>
+
+      <h2>Common varieties</h2>
+      <ol>
+        <li>Albino</li>
+        <li>Bull’s Blood</li>
+        <li>Chioggia</li>
+        <li>Detroit Dark Red</li>
+        <li>Early Wonder</li>
+      </ol>
+
+      <h2>Nutritional information</h2>
+      <p>Serving size: <data value="100 g"></data></p>
+
+
+
+
+
     </main>
     <aside>
 
