--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </ol>
 
       <h2>Nutritional information</h2>
-      <p>Serving size: <data 100 g</data></p>
+      <p>Serving size: <data value="100g"></data></p>
 
 
 
