--- a/index.html
+++ b/index.html
@@ -57,8 +57,16 @@
       </ol>
 
       <h2>Nutritional information</h2>
-      <p>Serving size: <data value="100g"></data></p>
+      <p>Serving size: <data value="100g"></data> </p>
 
+      <dl class="">
+        <dt>Energy: <dd>180 kJ</dd>
+        Carbohydrates:<dd> 9.96 g</dd>
+        Fat: <dd>0.18 g</dd>
+        Protein:<dd> 1.68 g</dd>
+      </dt>
+
+      </dl>
 
 
 
