--- a/index.html
+++ b/index.html
@@ -60,13 +60,26 @@
       <p>Serving size: <data value="100g"></data> </p>
 
       <dl class="">
-        <dt>Energy: <dd>180 kJ</dd>
-        Carbohydrates:<dd> 9.96 g</dd>
-        Fat: <dd>0.18 g</dd>
-        Protein:<dd> 1.68 g</dd>
+        <dt>Energy: <data value="180kJ"></data><dd>180 kJ</dd>
+        Carbohydrates:<data value="9.96 g"></data><dd> 9.96 g</dd>
+        Fat: <data value="0.18 g"></data><dd>0.18 g</dd>
+        Protein:<data value="1.69 g"></data><dd> 1.68 g</dd>
       </dt>
-
       </dl>
+
+<aside>
+  <h2>Tags</h2>
+
+  <ul>
+    <li>Crimson</li>
+    <li>Awesome</li>
+    <li>Pickle-able</li>
+    <li>Vegetable!</li>
+    <li>Delicious</li>
+  </ul>
+
+</aside>
+
 
 
 
