--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
 
 </aside>
 
+<footer>
 
+<small>Source: <a href="Wikipedia"></a> Last modified:<time> Aug 30, 2014</time></small>
 
-
+</footer>
 
     </main>
     <aside>
