--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <footer>
 
-<small>Source: <a href="Wikipedia"></a> Last modified:<time> Aug 30, 2014</time></small>
+<small>Source:<a href="Wikipedia;"></a> Last modified:<time> Aug 30, 2014</time></small>
 
 </footer>
 
