--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
       <figure>
-      <img src="beets.jpg" alt="">
+      <img src="" alt="">
 
         <figcaption>
           A bundle of organic beets from a local farm food co-op program.
@@ -35,17 +35,19 @@
 
       The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
 
-
-      In fact, <cite>Jim Halpert</cite> once said this about beets, <q>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
+    <p>
+      In fact, <cite>Jim Halpert</cite> once said this about beets, <q>
 
       bears eat beets. Bears, beets, <i>Battlestar Galactica”.</i></q>
+    </p>
 
       <p>
       <blockquote>
-           I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>
+           I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong>Show me a salad bar and I will clean them out of their beets.
       </blockquote>
       </p>
-      <footer> <cite>— Chris Pratt</cite></footer>
+      <footer> <cite>
+        — Chris Pratt</cite></footer>
 
       <h2>Common varieties</h2>
       <ol>
