--- a/index.html
+++ b/index.html
@@ -6,98 +6,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
-
-    <header>
-      <h1>Beetroot <i>(Beta vulgaris)</i> </h1>
-      <nav>
-        <ol>
-          <li>Common varieties
-          <li>Nutritional information</li>
-          <li>Tags </li>
-        </ol>
-
-      </nav>
-    </header>
-
-    <main>
-      <figure>
-      <img src="" alt="">
-
-        <figcaption>
-          A bundle of organic beets from a local farm food co-op program.
-        </figcaption>
-
-      </figure>
-
-      <p>
-        <time> 55 to 65 days </time> are needed from germination to harvest of the root.
-      </p>
-
-      The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
-
-    <p>
-      In fact, <cite>Jim Halpert</cite> once said this about beets, <q>
-
-      bears eat beets. Bears, beets, <i>Battlestar Galactica”.</i></q>
-    </p>
-
-      <p>
-      <blockquote>
-           I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong>Show me a salad bar and I will clean them out of their beets.
-      </blockquote>
-      </p>
-      <footer> <cite>
-        — Chris Pratt</cite></footer>
-
-      <h2>Common varieties</h2>
+  <header>
+    <h1>Beetroot <i>(Beta vulgaris)</i></h1>
+    <nav>
       <ol>
-        <li>Albino</li>
-        <li>Bull’s Blood</li>
-        <li>Chioggia</li>
-        <li>Detroit Dark Red</li>
-        <li>Early Wonder</li>
+        <li> <a href="Common varieties"></a> </li>
       </ol>
 
-      <h2>Nutritional information</h2>
-      <p>Serving size: <data value="100g"></data> </p>
 
-      <dl class="">
-        <dt>Energy: <data value="180kJ"></data><dd>180 kJ</dd>
-        Carbohydrates:<data value="9.96 g"></data><dd> 9.96 g</dd>
-        Fat: <data value="0.18 g"></data><dd>0.18 g</dd>
-        Protein:<data value="1.69 g"></data><dd> 1.68 g</dd>
-      </dt>
-      </dl>
+    </nav>
+  </header>
+  <main>
+    <figure>
 
-<aside>
-  <h2>Tags</h2>
-
-  <ul>
-    <li>Crimson</li>
-    <li>Awesome</li>
-    <li>Pickle-able</li>
-    <li>Vegetable!</li>
-    <li>Delicious</li>
-  </ul>
-
-</aside>
-
-<footer>
-
-<small>Source:<a href="Wikipedia;"></a> Last modified:<time> Aug 30, 2014</time></small>
-
-</footer>
-
-    </main>
-    <aside>
-
-    </aside>
-
-    <footer>
-
-    </footer>
-
-
-
+    </figure>
+  </main>
   </body>
 </html>
