--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>this is beets</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
@@ -10,16 +10,77 @@
     <h1>Beetroot <i>(Beta vulgaris)</i></h1>
     <nav>
       <ol>
-        <li> <a href="Common varieties"></a> </li>
+        <li><a href="Common varieties">Common varieties</a><Common varieties</li>
+        <li> <a href="Nutrtional information">Nutrtional information</a></li>
+      <li> <a href="Tags">Tags</a></li>
       </ol>
-
-
     </nav>
   </header>
   <main>
     <figure>
-
+<img src="images/beets.jpg" alt="beets">
+<figcaption>
+  A bundle of organic beets from a local farm food co-op program.
+</figcaption>
     </figure>
+
+    <p>
+55 to 65 days are needed from germination to harvest of the root.
+    </p>
+    The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
+    In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica”.</i></q>
+
+<p>
+
+  <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</blockquote>
+</p>
+<footer>
+  — Chris Pratt
+</footer>
+
+<h2>Common varieties</h2>
+  <ol>
+    <li>Albino</li>
+    <li>Bull’s Blood</li>
+    <li>Chioggia</li>
+    <li>Detroit Dark Red</li>
+    <li>Early Wonder</li>
+</ol>
+
+<h2>
+Nutritional information
+</h2>
+
+<p>
+  Serving size: 100 g
+</p>
+  <dl class=""
+    <dt>
+      Energy: 180 kJ
+      Carbohydrates: 9.96 g
+      Fat: 0.18 g
+      Protein: 1.68 g
+    </dt>
+  </dl>
+
+<aside>
+  <h2>
+      Tags
+  </h2>
+  <ul>
+    <li>Crimson</li>
+    <li>Awesome</li>
+    <li>Pickle-able</li>
+    <li>Vegetable!</li>
+    <li>Delicious</li>
+  </ul>
+
+</aside>
+    <footer>
+
+      <small>Source:<a href="Wikipedia.org">Wikipedia</a> Last modified: Aug 30, 2014</small>
+
+    </footer>
   </main>
   </body>
 </html>
