--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Beetroot <i>(Beta vulgaris)</i></h1>
     <nav>
       <ol>
-        <li><a href="Common varieties">Common varieties</a><Common varieties</li>
-        <li> <a href="Nutrtional information">Nutrtional information</a></li>
+        <li> <a href="Common varieties">Commonvarieties</a></li>
+        <li> <a href="Nutrtional information">Nutrtionalinformation</a></li>
       <li> <a href="Tags">Tags</a></li>
       </ol>
     </nav>
@@ -31,7 +31,6 @@
     In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica”.</i></q>
 
 <p>
-
   <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</blockquote>
 </p>
 <footer>
@@ -54,9 +53,9 @@ Nutritional information
 <p>
   Serving size: 100 g
 </p>
-  <dl class=""
+  <dl class="">
     <dt>
-      Energy: 180 kJ
+      >Energy: 180 kJ
       Carbohydrates: 9.96 g
       Fat: 0.18 g
       Protein: 1.68 g
