--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Beetroot <i>(Beta vulgaris)</i></h1>
     <nav>
       <ol>
-        <li> <a href="Common varieties">Commonvarieties</a></li>
-        <li> <a href="Nutrtional information">Nutrtionalinformation</a></li>
+      <li> <a href="Common varieties">Common varieties</a></li>
+      <li> <a href="Nutrtional information">Nutrtional information</a></li>
       <li> <a href="Tags">Tags</a></li>
       </ol>
     </nav>
@@ -30,9 +30,8 @@
     The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
     In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica”.</i></q>
 
-<p>
+
   <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</blockquote>
-</p>
 <footer>
   — Chris Pratt
 </footer>
@@ -54,12 +53,12 @@ Nutritional information
   Serving size: 100 g
 </p>
   <dl class="">
-    <dt>
-      >Energy: 180 kJ
+  <dt>
+      Energy: 180 kJ
       Carbohydrates: 9.96 g
       Fat: 0.18 g
       Protein: 1.68 g
-    </dt>
+  </dt>
   </dl>
 
 <aside>
