--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Beetroot <i>(Beta vulgaris)</i></h1>
     <nav>
       <ol>
-      <li> <a href="Common varieties">Common varieties</a></li>
-      <li> <a href="Nutrtional information">Nutrtional information</a></li>
+      <li> <a href="CommonVarieties">CommonVarieties</a></li>
+      <li> <a href="Nutrtionalinformation">Nutrtionalinformation</a></li>
       <li> <a href="Tags">Tags</a></li>
       </ol>
     </nav>
@@ -59,8 +59,8 @@ Nutritional information
       Fat: 0.18 g
       Protein: 1.68 g
   </dt>
-  </dl>
-
+</dl>
+  </main>
 <aside>
   <h2>
       Tags
@@ -79,6 +79,6 @@ Nutritional information
       <small>Source:<a href="Wikipedia.org">Wikipedia</a> Last modified: Aug 30, 2014</small>
 
     </footer>
-  </main>
+
   </body>
 </html>
