--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@ Nutritional information
 <p>
   Serving size: 100 g
 </p>
+</main>
   <dl class="">
   <dt>
-      Energy: 180 kJ
-      Carbohydrates: 9.96 g
-      Fat: 0.18 g
-      Protein: 1.68 g
+      <dd>Energy: 180 kJ</dd>
+      <dd>Carbohydrates: 9.96 g</dd>
+      <dd>Fat: 0.18 g</dd>
+      <dd>Protein: 1.68 g</dd>
   </dt>
 </dl>
-  </main>
+
 <aside>
   <h2>
       Tags
