--- a/index.html
+++ b/index.html
@@ -53,13 +53,11 @@ Nutritional information
   Serving size: 100 g
 </p>
 </main>
-  <dl class="">
-  <dt>
-      <dd>Energy: 180 kJ</dd>
-      <dd>Carbohydrates: 9.96 g</dd>
-      <dd>Fat: 0.18 g</dd>
-      <dd>Protein: 1.68 g</dd>
-  </dt>
+  <dl>
+    <dt>Energy:</dt> <dd>180 kJ</dd>
+    <dt>Carbohydrates:</dt> <dd>9.96 g</dd>
+    <dt>Fat:</dt> <dd>0.18 g</dd>
+    <dt>Protein:</dt> <dd>1.68 g</dd>
 </dl>
 
 <aside>
