--- a/index.html
+++ b/index.html
@@ -54,10 +54,14 @@ Nutritional information
 </p>
 </main>
   <dl>
-    <dt>Energy:</dt> <dd>180 kJ</dd>
-    <dt>Carbohydrates:</dt> <dd>9.96 g</dd>
-    <dt>Fat:</dt> <dd>0.18 g</dd>
-    <dt>Protein:</dt> <dd>1.68 g</dd>
+    <dt>Energy:</dt>
+    <dd>180 kJ</dd>
+    <dt>Carbohydrates:</dt>
+    <dd>9.96 g</dd>
+    <dt>Fat:</dt>
+    <dd>0.18 g</dd>
+    <dt>Protein:</dt>
+    <dd>1.68 g</dd>
 </dl>
 
 <aside>
