--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 </figcaption>
     </figure>
 
-    <p>
-55 to 65 days are needed from germination to harvest of the root.
-    </p>
+  <p> 55 to 65 days are needed from germination to harvest of the root.</p>
     The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
     In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica”.</i></q>
 
@@ -49,9 +47,7 @@
 Nutritional information
 </h2>
 
-<p>
-  Serving size: 100 g
-</p>
+<p> Serving size: 100 g </p>
 </main>
   <dl>
     <dt>Energy:</dt>
