--- a/index.html
+++ b/index.html
@@ -25,29 +25,28 @@
     </figure>
 
     <p> 55 to 65 days are needed from germination to harvest of the root.</p>
-    The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.
-    In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica”.</i></q>
+    The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable. In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica”.</i></q>
+    <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</blockquote>
 
-  <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</blockquote>
-<footer>
-  — Chris Pratt
-</footer>
+    <footer>
+      — Chris Pratt
+    </footer>
 
-<h2>Common varieties</h2>
-  <ol>
-    <li>Albino</li>
-    <li>Bull’s Blood</li>
-    <li>Chioggia</li>
-    <li>Detroit Dark Red</li>
-    <li>Early Wonder</li>
-</ol>
+    <h2>Common varieties</h2>
+    <ol>
+      <li>Albino</li>
+      <li>Bull’s Blood</li>
+      <li>Chioggia</li>
+      <li>Detroit Dark Red</li>
+      <li>Early Wonder</li>
+    </ol>
 
-<h2>
+    <h2>
 Nutritional information
 </h2>
 
-<p> Serving size: 100 g </p>
-</main>
+    <p> Serving size: <data value="100g"></data>100 g </p>
+  </main>
   <dl>
     <dt>Energy:</dt>
     <dd>180 kJ</dd>
@@ -57,26 +56,26 @@ Nutritional information
     <dd>0.18 g</dd>
     <dt>Protein:</dt>
     <dd>1.68 g</dd>
-</dl>
+  </dl>
 
-<aside>
-  <h2>
+  <aside>
+    <h2>
       Tags
   </h2>
-  <ul>
-    <li>Crimson</li>
-    <li>Awesome</li>
-    <li>Pickle-able</li>
-    <li>Vegetable!</li>
-    <li>Delicious</li>
-  </ul>
+    <ul>
+      <li>Crimson</li>
+      <li>Awesome</li>
+      <li>Pickle-able</li>
+      <li>Vegetable!</li>
+      <li>Delicious</li>
+    </ul>
 
-</aside>
-    <footer>
+  </aside>
+  <footer>
 
-      <small>Source:<a href="Wikipedia.org">Wikipedia</a> Last modified: Aug 30, 2014</small>
+    <small>Source:<a href="Wikipedia.org">Wikipedia</a>Last modified:Aug 30, 2014</small>
 
-    </footer>
+  </footer>
 
-  </body>
+</body>
 </html>
