--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </figcaption>
     </figure>
 
-    <p> 55 to 65 days are needed from germination to harvest of the root.</p>
+    <p>55 to 65 days are needed from germination to harvest of the root.</p>
     The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable. In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica”.</i></q>
-    <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</blockquote>
+    <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.<cite>chrispratt</cite> </blockquote>
 
     <footer>
       — Chris Pratt
