--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Nutritional information
   </aside>
   <footer>
 
-    <small>Source:<a href="Wikipedia.org">Wikipedia</a>Last modified:Aug 30, 2014</small>
+    <small>Source:<a href="Wikipedia.org">Wikipedia</a>Last modified:<time>2014-08-30</time>Aug 30, 2014</small>
 
   </footer>
 
